# exp_harness_repo

./: LICENSE  README.md  TEST.md
.github/workflows/: ci.yml
exp_harness/: package.xml  setup.cfg  setup.py
exp_harness/exp_harness/: experiment_server_node.py  metric_pub_node.py  report_printer_node.py  stats_welford.py
exp_harness/launch/: demo.launch.py
exp_harness/test/: test.bash
exp_harness_interfaces/: CMakeLists.txt  package.xml
exp_harness_interfaces/msg/: ExperimentReport.msg
exp_harness_interfaces/srv/: RunExperiment.srv
